@@ -166,7 +166,7 @@ broken if you did not download the <b>full</b> distribution).
 		An executive summary of Tapestry
 	<li><a href="doc/Tapestry.pdf">Tapestry Developer's Guide</a> (PDF) -- main reference for
 		designing and developing Tapestry applications
-	<li><a href="doc/JBE.pdf">Java Build Environment</a> (PDF) -- guide to setting up
+	<li><a href="doc/JBE/JBE.html">Java Build Environment</a> (HTML) -- guide to setting up
 		and using the JBE (a set of Makefiles used to build and run Tapestry and Tapestry applications).
 </ul>
 
